--- a/Homeworks/Homework1/Homework1.ipynb
+++ b/Homeworks/Homework1/Homework1.ipynb
@@ -2,99 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
    "id": "79cf2a7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from openai import OpenAI\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "client = OpenAI(base_url=os.getenv(\"URL\"), api_key=os.getenv(\"API_KEY\"))\n",
-    "\n",
-    "resp = client.completions.create(\n",
-    "    model=\"meta-llama/Meta-Llama-3.1-8B\",\n",
-    "    temperature=0.2,\n",
-    "    max_tokens=100,\n",
-    "    stop=[\"\\n\"],\n",
-    "    prompt=\"Shakespeare was\",\n",
-    ")\n",
-    "print(resp.choices[0].text) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2024-09-12T22:01:53.371348Z",
+     "start_time": "2024-09-12T22:01:53.079933Z"
+    }
    },
+   "source": "import Homework1",
    "outputs": [],
-   "source": [
-    "from typing import List, Optional\n",
-    "\n",
-    "\n",
-    "def prompt_zero_shot(problem: str) -> str:\n",
-    "    return problem + \" Correct Answer: \"\n",
-    "\n",
-    "\n",
-    "def extract_zero_shot(completion: str) -> Optional[int]:\n",
-    "    if completion.isdigit():\n",
-    "        return int(completion)\n",
-    "\n",
-    "def solve_zero_shot(problem: str) -> Optional[int]:\n",
-    "    resp = client.completions.create(\n",
-    "        model=\"meta-llama/Meta-Llama-3.1-8B\",\n",
-    "        temperature=0.1,\n",
-    "        prompt=prompt_zero_shot(problem),\n",
-    "        max_tokens=1\n",
-    "    )\n",
-    "    \n",
-    "    return extract_zero_shot(resp.choices[0].text)"
-   ]
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Task 2",
+   "id": "c103c1df99daf57"
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
    "id": "20fc0c91",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:00<00:00,  6.60it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1.0, 1.0, 1.0, 1.0, 1.0]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T22:01:54.260643Z",
+     "start_time": "2024-09-12T22:01:53.379943Z"
     }
-   ],
+   },
    "source": [
-    "from tqdm.auto import tqdm\n",
-    "\n",
     "EASY = [\n",
-    "    { \n",
+    "    {\n",
     "        \"question\": \"I ate 2 pears and 1 apple. How many fruit did I eat?\",\n",
-    "        \"answer\": 3 \n",
+    "        \"answer\": 3\n",
     "    },\n",
     "    {\n",
     "        \"question\": \"I had ten chocolates but ate one. How many remain?\",\n",
@@ -102,152 +40,138 @@
     "    }\n",
     "]\n",
     "\n",
-    "def accuracy_zero_shot(problems: List[dict]) -> List[float]:\n",
-    "\n",
-    "    accuracies = []\n",
-    "\n",
-    "    for _ in tqdm(range(5)):\n",
-    "        total_correct = 0\n",
-    "\n",
-    "        for item in problems:\n",
-    "            answer = solve_zero_shot(item[\"question\"])\n",
-    "\n",
-    "            if answer == item[\"answer\"]:\n",
-    "                total_correct += 1\n",
-    "        accuracies.append(total_correct / len(problems))\n",
-    "    \n",
-    "    return accuracies\n",
-    "\n",
-    "accuracy_zero_shot(EASY)\n"
-   ]
+    "Homework1.accuracy_zero_shot(EASY)"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1fb2b8b02e7a4dd89dbc9e1b44aa5f54"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.0, 1.0, 1.0, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Task 3",
+   "id": "d2b58a122ca64962"
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
    "id": "6296a6ff",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T22:02:18.414345Z",
+     "start_time": "2024-09-12T22:01:54.349437Z"
+    }
+   },
+   "source": [
+    "import datasets\n",
+    "\n",
+    "TEST = datasets.load_dataset(\"nuprl/llm-systems-math-word-problems\", split=\"test\")\n",
+    "print(Homework1.accuracy_zero_shot(TEST))"
+   ],
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:18<00:00,  3.62s/it]"
-     ]
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2689c28f62014471b75aacf750925a12"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.16, 0.16, 0.16, 0.14, 0.16]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[0.16, 0.18, 0.14, 0.16, 0.14]\n"
      ]
     }
    ],
-   "source": [
-    "import datasets\n",
-    "\n",
-    "TEST = datasets.load_dataset(\"nuprl/llm-systems-math-word-problems\", split=\"test\")\n",
-    "print(accuracy_zero_shot(TEST))"
-   ]
+   "execution_count": 3
   },
   {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "e951535a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prompt_few_shot(problem: str) -> str:\n",
-    "    return f\"\"\"\n",
-    "    Question: I ate 2 pears and 1 apple. How many fruit did I eat?\n",
-    "    Answer: 3\n",
-    "\n",
-    "    Question: I had ten chocolates but ate one. How many remain?\n",
-    "    Answer: 9\n",
-    "\n",
-    "    Question: {problem}\n",
-    "    Answer:\"\"\"\n",
-    "\n",
-    "def extract_few_shot(completion: str) -> Optional[int]:\n",
-    "    # only extract digits from str\n",
-    "    return int(\"\".join(filter(str.isdigit, completion)))\n",
-    "\n",
-    "def solve_few_shot(problem: str) -> Optional[int]:    \n",
-    "    resp = client.completions.create(\n",
-    "        model=\"meta-llama/Meta-Llama-3.1-8B\",\n",
-    "        temperature=0.2,\n",
-    "        prompt=prompt_few_shot(problem),\n",
-    "        max_tokens=100,\n",
-    "        stop=[\"\\n\"]\n",
-    "    )\n",
-    "    \n",
-    "    return extract_few_shot(resp.choices[0].text)\n",
-    "\n",
-    "def accuracy_few_shot(problems: List[dict]) -> float:    \n",
-    "    accuracies = []\n",
-    "\n",
-    "    for _ in tqdm(range(5)):\n",
-    "        total_correct = 0\n",
-    "\n",
-    "        for item in problems:\n",
-    "            answer = solve_few_shot(item[\"question\"])\n",
-    "\n",
-    "            if answer == item[\"answer\"]:\n",
-    "                total_correct += 1\n",
-    "        accuracies.append(total_correct / len(problems))\n",
-    "    \n",
-    "    return accuracies"
-   ]
+   "cell_type": "markdown",
+   "source": "# Task 4",
+   "id": "8fea2f7e3e0e708a"
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
    "id": "ac642fad",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T22:02:51.107724Z",
+     "start_time": "2024-09-12T22:02:18.427816Z"
+    }
+   },
+   "source": "Homework1.accuracy_few_shot(TEST)",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:27<00:00,  5.48s/it]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ca6e57b7b2be4e0fbc0fb41275384118"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "text/plain": [
-       "[0.16, 0.16, 0.16, 0.14, 0.14]"
+       "[0.16, 0.16, 0.18, 0.18, 0.16]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "accuracy_few_shot(TEST)"
-   ]
+   "execution_count": 4
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T22:02:51.188054Z",
+     "start_time": "2024-09-12T22:02:51.185361Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f2ce497",
-   "metadata": {},
+   "source": "",
+   "id": "12c5acc53cfc495c",
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92d74352",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
