world hunger has OFFICIALLY been solved using chain of thought

--- a/Homeworks/Homework1/Homework1.ipynb
+++ b/Homeworks/Homework1/Homework1.ipynb
@@ -5,8 +5,8 @@
    "id": "79cf2a7b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T22:01:53.371348Z",
-     "start_time": "2024-09-12T22:01:53.079933Z"
+     "end_time": "2024-09-17T23:15:38.336106Z",
+     "start_time": "2024-09-17T23:15:37.989623Z"
     }
    },
    "source": "import Homework1",
@@ -24,8 +24,8 @@
    "id": "20fc0c91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T22:01:54.260643Z",
-     "start_time": "2024-09-12T22:01:53.379943Z"
+     "end_time": "2024-09-17T23:07:28.465825Z",
+     "start_time": "2024-09-17T23:07:27.521703Z"
     }
    },
    "source": [
@@ -51,7 +51,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1fb2b8b02e7a4dd89dbc9e1b44aa5f54"
+       "model_id": "1153f03b1a984141ab197f8b852a616e"
       }
      },
      "metadata": {},
@@ -81,16 +81,28 @@
    "id": "6296a6ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T22:02:18.414345Z",
-     "start_time": "2024-09-12T22:01:54.349437Z"
+     "end_time": "2024-09-17T23:15:42.353914Z",
+     "start_time": "2024-09-17T23:15:40.085005Z"
     }
    },
    "source": [
     "import datasets\n",
     "\n",
-    "TEST = datasets.load_dataset(\"nuprl/llm-systems-math-word-problems\", split=\"test\")\n",
-    "print(Homework1.accuracy_zero_shot(TEST))"
+    "TEST = datasets.load_dataset(\"nuprl/llm-systems-math-word-problems\", split=\"test\")"
    ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T23:07:53.581684Z",
+     "start_time": "2024-09-17T23:07:30.586801Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(Homework1.accuracy_zero_shot(TEST))",
+   "id": "a7a8166aa873b0f6",
    "outputs": [
     {
      "data": {
@@ -100,7 +112,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2689c28f62014471b75aacf750925a12"
+       "model_id": "ac9da9d951dd4ed0a7ee586726153381"
       }
      },
      "metadata": {},
@@ -110,11 +122,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.16, 0.18, 0.14, 0.16, 0.14]\n"
+      "[0.14, 0.14, 0.18, 0.16, 0.14]\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -127,8 +139,8 @@
    "id": "ac642fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T22:02:51.107724Z",
-     "start_time": "2024-09-12T22:02:18.427816Z"
+     "end_time": "2024-09-17T23:08:26.485101Z",
+     "start_time": "2024-09-17T23:07:53.665324Z"
     }
    },
    "source": "Homework1.accuracy_few_shot(TEST)",
@@ -141,7 +153,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ca6e57b7b2be4e0fbc0fb41275384118"
+       "model_id": "a7def01324114013bb4ca5523c0e32cb"
       }
      },
      "metadata": {},
@@ -150,26 +162,70 @@
     {
      "data": {
       "text/plain": [
-       "[0.16, 0.16, 0.18, 0.18, 0.16]"
+       "[0.18, 0.16, 0.18, 0.16, 0.18]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Task 5",
+   "id": "94bd16c2c99bdc99"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T22:02:51.188054Z",
-     "start_time": "2024-09-12T22:02:51.185361Z"
+     "end_time": "2024-09-17T23:23:00.346147Z",
+     "start_time": "2024-09-17T23:15:44.386857Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "Homework1.accuracy_cot(TEST)",
+   "id": "4c60de93d57b0f67",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "591c3499c40444c4bee263a6376b1b91"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.6, 0.6, 0.6, 0.6, 0.6]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T23:09:53.556839Z",
+     "start_time": "2024-09-17T23:09:53.554580Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "12c5acc53cfc495c",
+   "id": "76f8756f68c86a0c",
    "outputs": [],
    "execution_count": null
   }
