updated system prompt

--- a/Homeworks/Homework2/Homework2.ipynb
+++ b/Homeworks/Homework2/Homework2.ipynb
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/nickeldime/Code/LLM Class/CS4973/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
+      "/Users/nickeldime/Code/LLM Class/CS4973/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -90,10 +90,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 100%|██████████| 27899/27899 [00:00<00:00, 1423286.07 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Flight(id=0, date=datetime.date(2023, 1, 1), airline='Delta', flight_number='DL8261', origin='LAX', destination='JFK', departure_time=datetime.time(20, 59), arrival_time=datetime.time(22, 59), available_seats=88),\n",
+       " Flight(id=1, date=datetime.date(2023, 1, 1), airline='Delta', flight_number='DL5288', origin='JFK', destination='BOS', departure_time=datetime.time(17, 16), arrival_time=datetime.time(19, 16), available_seats=137),\n",
+       " Flight(id=2, date=datetime.date(2023, 1, 1), airline='JetBlue', flight_number='B69139', origin='LAX', destination='ATL', departure_time=datetime.time(3, 51), arrival_time=datetime.time(5, 51), available_seats=107),\n",
+       " Flight(id=3, date=datetime.date(2023, 1, 1), airline='Southwest', flight_number='WN2445', origin='LAX', destination='ATL', departure_time=datetime.time(8, 8), arrival_time=datetime.time(10, 8), available_seats=164),\n",
+       " Flight(id=4, date=datetime.date(2023, 1, 1), airline='Southwest', flight_number='WN7472', origin='ORD', destination='SFO', departure_time=datetime.time(2, 9), arrival_time=datetime.time(4, 9), available_seats=92)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_flights_dataset()[:5]"
+   ]
   },
   {
    "cell_type": "code",
@@ -139,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
