--- a/Homeworks/Homework2/Homework2.ipynb
+++ b/Homeworks/Homework2/Homework2.ipynb
@@ -35,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nickeldime/Code/LLM Class/CS4973/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "from datasets import load_dataset\n",
@@ -90,15 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out dataset to file\n",
+    "flights = load_flights_dataset()\n",
+    "with open(\"flights.txt\", \"w\") as f:\n",
+    "    for flight in flights:\n",
+    "        f.write(f\"{flight.id}, {flight.date}, {flight.airline}, {flight.flight_number}, {flight.origin}, {flight.destination}, {flight.departure_time}, {flight.arrival_time}, {flight.available_seats}\\n\")\n",
+    "\n",
+    "# - prompt: I need to go from ATL to SEA on Jan 9\n",
+    "#   expected_type: find-flights\n",
+    "#   expected_result: [663, 664, 665]\n",
+    "# - prompt: Book the earliest flight for the journey\n",
+    "#   expected_type: book-flight\n",
+    "#   expected_result: 663\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79\n",
-      "[Flight(id=79, date=datetime.date(2023, 1, 2), airline='Delta', flight_number='DL8261', origin='LAX', destination='JFK', departure_time=datetime.time(20, 59), arrival_time=datetime.time(22, 59), available_seats=62), Flight(id=80, date=datetime.date(2023, 1, 2), airline='Delta', flight_number='DL8777', origin='LAX', destination='JFK', departure_time=datetime.time(21, 6), arrival_time=datetime.time(23, 6), available_seats=172)] ['book-flight', 79]\n"
+      "['find-flights', [Flight(id=662, date=datetime.date(2023, 1, 9), airline='United', flight_number='UA6982', origin='ATL', destination='SEA', departure_time=datetime.time(1, 48), arrival_time=datetime.time(3, 48), available_seats=102), Flight(id=663, date=datetime.date(2023, 1, 9), airline='JetBlue', flight_number='B68202', origin='ATL', destination='SEA', departure_time=datetime.time(9, 55), arrival_time=datetime.time(11, 55), available_seats=103), Flight(id=664, date=datetime.date(2023, 1, 9), airline='Southwest', flight_number='WN4071', origin='ATL', destination='SEA', departure_time=datetime.time(20, 23), arrival_time=datetime.time(22, 23), available_seats=107)]]\n"
      ]
     }
    ],
@@ -121,17 +132,7 @@
     "            if flight.id == flight_id:\n",
     "                return flight.id\n",
     "\n",
-    "        return None\n",
-    "\n",
-    "flight_ids = find_flights(\"LAX\", \"JFK\", date(2023, 1, 2))\n",
-    "print(flight_ids[0].id)\n",
-    "if flight_ids:\n",
-    "    result = ['book-flight', book_flight(flight_ids[0].id)]\n",
-    "else:\n",
-    "    result = ['book-flight', None]\n",
-    "\n",
-    "print(flight_ids, result)\n",
-    "\n"
+    "        return None"
    ]
   },
   {
