--- a/Homeworks/Homework3/Homework3.ipynb
+++ b/Homeworks/Homework3/Homework3.ipynb
@@ -10,8 +10,7 @@
     "%autoreload 2\n",
     "from datasets import load_dataset\n",
     "import utils\n",
-    "wikepedia_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"wikipedia-northeastern-university\", split=\"test\")\n",
-    "\n"
+    "wikipedia_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"wikipedia-northeastern-university\", split=\"test\")"
    ]
   },
   {
@@ -28,8 +27,8 @@
     }
    ],
    "source": [
-    "for i in range(len(wikepedia_dataset)):\n",
-    "    if wikepedia_dataset[i][\"title\"] == \"List of Arab Americans\":\n",
+    "for i in range(len(wikipedia_dataset)):\n",
+    "    if wikipedia_dataset[i][\"title\"] == \"List of Arab Americans\":\n",
     "        print(i)"
    ]
   },
@@ -47,7 +46,7 @@
     }
    ],
    "source": [
-    "print(wikepedia_dataset[1092])"
+    "print(wikipedia_dataset[1092])"
    ]
   },
   {
@@ -150,7 +149,7 @@
     "\n",
     "    print(filtered_tokens)\n",
     "    \n",
-    "answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"], wikepedia_dataset)"
+    "answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"], wikipedia_dataset)"
    ]
   }
  ],
