--- a/Homeworks/Homework3/Homework3.ipynb
+++ b/Homeworks/Homework3/Homework3.ipynb
@@ -9,8 +9,18 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from datasets import load_dataset\n",
-    "import utils\n",
-    "wikipedia_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"wikipedia-northeastern-university\", split=\"test\")"
+    "\n",
+    "import Homework3"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "wikipedia_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"wikipedia-northeastern-university\",\n",
+    "                                 split=\"test\")"
    ]
   },
   {
@@ -72,10 +82,7 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "obscure_questions_dataset_tiny = load_dataset(\"nuprl/engineering-llm-systems\", name=\"obscure_questions\", split=\"tiny\")\n",
-    "\n"
-   ]
+   "source": "obscure_questions_dataset_tiny = load_dataset(\"nuprl/engineering-llm-systems\", name=\"obscure_questions\", split=\"tiny\")"
   },
   {
    "cell_type": "code",
@@ -122,34 +129,8 @@
     }
    ],
    "source": [
-    "from typing import List\n",
-    "import spacy\n",
-    "\n",
-    "\n",
-    "def answer_query(question: str, choices: List[str], documents: List[str]) -> str:\n",
-    "    \"\"\"\n",
-    "    Answers a multiple choice question using retrieval augmented generation.\n",
-    "\n",
-    "    `question` is the text of the question. `choices` is the list of choices\n",
-    "     with leading letters. For example:\n",
-    "\n",
-    "     ```\n",
-    "     [\"A. Choice 1\", \"B. Choice 2\", \"C. Choice 3\", \"D. Choice 4\"]\n",
-    "     ```\n",
-    "\n",
-    "     `documents` is the list of documents to use for retrieval augmented\n",
-    "     generation.\n",
-    "\n",
-    "     The result should be the just the letter of the correct choice, e.g.,\n",
-    "     `\"A\"` but not `\"A.\"` and not `\"A. Choice 1\"`.\n",
-    "     \"\"\"\n",
-    "    nlp = spacy.load(\"en_core_web_sm\")\n",
-    "    doc = nlp(question)\n",
-    "    filtered_tokens = [token.text for token in doc if not token.is_stop]\n",
-    "\n",
-    "    print(filtered_tokens)\n",
-    "    \n",
-    "answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"], wikipedia_dataset)"
+    "Homework3.answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"],\n",
+    "                       wikipedia_dataset)"
    ]
   }
  ],
