--- a/Homeworks/Homework3/Homework3.ipynb
+++ b/Homeworks/Homework3/Homework3.ipynb
@@ -182,8 +182,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:32:30.610508Z",
-     "start_time": "2024-10-29T17:25:20.235762Z"
+     "end_time": "2024-10-29T17:50:03.525667Z",
+     "start_time": "2024-10-29T17:43:11.624500Z"
     }
    },
    "cell_type": "code",
@@ -197,7 +197,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0d6f5c1feb5b48a29ce5d6664ab7df35"
+       "model_id": "60f503565c4d40969ec1b9cc20aab77b"
       }
      },
      "metadata": {},
@@ -220,16 +220,16 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: C\n",
-      "Predicted answer for question 2: C\n",
+      "Received answer from API: B\n",
+      "Predicted answer for question 2: B\n",
       "Expected answer for question 2: B\n",
       "Received question: What university awarded Melnea Cass an honorary doctorate on June 15, 1969?\n",
       "Received choices: ['A. Boston College', 'B. Northeastern University', 'C. Simmons College', 'D. Harvard University']\n",
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: C\n",
-      "Predicted answer for question 3: C\n",
+      "Received answer from API: D\n",
+      "Predicted answer for question 3: D\n",
       "Expected answer for question 3: B\n",
       "Received question: What position does Richard Saul Wurman hold at Northeastern University?\n",
       "Received choices: ['A. Adjunct Professor', 'B. Distinguished Professor', 'C. Dean of Architecture', 'D. Chancellor']\n",
@@ -260,16 +260,16 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: D\n",
-      "Predicted answer for question 7: D\n",
+      "Received answer from API: C\n",
+      "Predicted answer for question 7: C\n",
       "Expected answer for question 7: B\n",
       "Received question: In what year was 'Pietro Mascagni and His Operas' published?\n",
       "Received choices: ['A. 1905', 'B. 2002', 'C. 1996', 'D. 2008']\n",
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: A\n",
-      "Predicted answer for question 8: A\n",
+      "Received answer from API: B\n",
+      "Predicted answer for question 8: B\n",
       "Expected answer for question 8: B\n",
       "Received question: What is the official flower of the National Society of Pershing Rifles?\n",
       "Received choices: ['A. Red Rose', 'B. Bluebell', 'C. White Rose', 'D. Lily']\n",
@@ -356,8 +356,8 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: A\n",
-      "Predicted answer for question 19: A\n",
+      "Received answer from API: D\n",
+      "Predicted answer for question 19: D\n",
       "Expected answer for question 19: A\n",
       "Received question: In what year was the Charles J. Ogletree Jr. Chair in Race and Criminal Justice established at Harvard Law School?\n",
       "Received choices: ['A. 2010', 'B. 2015', 'C. 2017', 'D. 2020']\n",
@@ -492,8 +492,8 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: Northeast\n",
-      "Predicted answer for question 36: Northeast\n",
+      "Received answer from API: A\n",
+      "Predicted answer for question 36: A\n",
       "Expected answer for question 36: C\n",
       "Received question: What degree did Theodore C. Speliotis earn from Northeastern University?\n",
       "Received choices: [\"A. Master's in Education\", \"B. Bachelor's in Political Science\", \"C. Bachelor's in Sociology\", \"D. Master's in Political Science\"]\n",
@@ -524,8 +524,8 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: A\n",
-      "Predicted answer for question 40: A\n",
+      "Received answer from API: B\n",
+      "Predicted answer for question 40: B\n",
       "Expected answer for question 40: C\n",
       "Received question: Which of the following companies collaborated with Northeastern University in the development of RF MEMS switches?\n",
       "Received choices: ['A. IBM', 'B. Intel', 'C. Texas Instruments', 'D. Google']\n",
@@ -540,8 +540,8 @@
       "Total chunks created: 67065\n",
       "Ranked chunks based on TF-IDF\n",
       "Reranked chunks based on BERT similarity\n",
-      "Received answer from API: A\n",
-      "Predicted answer for question 42: A\n",
+      "Received answer from API: B\n",
+      "Predicted answer for question 42: B\n",
       "Expected answer for question 42: B\n",
       "Received question: Which university's center was one of the initial tenants of the ESPN Wide World of Sports Complex?\n",
       "Received choices: ['A. Harvard University', 'B. Northeastern University', 'C. University of Florida', 'D. University of Central Florida']\n",
@@ -607,21 +607,21 @@
       "Received answer from API: B\n",
       "Predicted answer for question 50: B\n",
       "Expected answer for question 50: A\n",
-      "Accuracy: 38.00%\n"
+      "Accuracy: 42.00%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "38.0"
+       "42.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 31
   },
   {
    "metadata": {},
