--- a/Homeworks/Homework4/scraping.ipynb
+++ b/Homeworks/Homework4/scraping.ipynb
@@ -22,7 +22,13 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "#imports\n",
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "import Homework4"
+   ],
    "id": "a1a57b69ad44a9d7"
   },
   {
@@ -36,7 +42,12 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Example for undergraduate catalog\n",
+    "undergrad_pages = Homework4.get_subpages(\"https://catalog.northeastern.edu/undergraduate/computer-information-science/\")\n",
+    "grad_pages = Homework4.get_subpages(\"https://catalog.northeastern.edu/graduate/computer-information-science/\")\n",
+    "all_pages = undergrad_pages + grad_pages"
+   ],
    "id": "4e8143b09e18a65a"
   },
   {
@@ -50,7 +61,13 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Display content for \"Computer Science, Minor\"\n",
+    "for page in all_pages:\n",
+    "    if \"computer-science-minor\" in page['url']:  # Check if the URL contains the minor path\n",
+    "        print(page['content'])\n",
+    "        break"
+   ],
    "id": "d554f41a34913965"
   },
   {
@@ -64,7 +81,30 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Apply clean up function\n",
+    "for page in all_pages:\n",
+    "    page['content'] = Homework4.clean_content(page['content'])\n",
+    "\n",
+    "# Convert content sections to vectors and cluster\n",
+    "sections = [section for page in all_pages for section in page['content'].split(\"## \")]\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(sections)\n",
+    "\n",
+    "# Use KMeans for clustering similar sections\n",
+    "n_clusters = 20  # Adjust based on content size\n",
+    "kmeans = KMeans(n_clusters=n_clusters)\n",
+    "kmeans.fit(X)\n",
+    "\n",
+    "# Display top 20 most similar sections\n",
+    "for i in range(n_clusters):\n",
+    "    cluster_indices = np.where(kmeans.labels_ == i)[0]\n",
+    "    if len(cluster_indices) > 1:  # Only show clusters with potential duplicates\n",
+    "        print(f\"Cluster {i}:\")\n",
+    "        for index in cluster_indices[:5]:  # Display top 5 similar sections for brevity\n",
+    "            print(sections[index])\n",
+    "            print(\"\\n\" + \"=\" * 40 + \"\\n\")"
+   ],
    "id": "dc350d66c97305a5"
   },
   {
