--- a/Homeworks/Homework3/Homework3.ipynb
+++ b/Homeworks/Homework3/Homework3.ipynb
@@ -2,50 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:15:26.743856Z",
      "start_time": "2024-10-29T14:15:21.937201Z"
     }
    },
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from datasets import load_dataset\n",
     "\n",
     "import Homework3"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:15:35.095759Z",
      "start_time": "2024-10-29T14:15:33.570422Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "wikipedia_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"wikipedia-northeastern-university\",\n",
     "                                 split=\"test\")"
-   ],
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:09:32.853083Z",
      "start_time": "2024-10-29T14:09:32.728573Z"
     }
    },
-   "source": [
-    "for i in range(len(wikipedia_dataset)):\n",
-    "    if wikipedia_dataset[i][\"title\"] == \"List of Arab Americans\":\n",
-    "        print(i)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -55,19 +51,21 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "for i in range(len(wikipedia_dataset)):\n",
+    "    if wikipedia_dataset[i][\"title\"] == \"List of Arab Americans\":\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T03:26:29.092556Z",
      "start_time": "2024-10-29T03:26:29.072316Z"
     }
    },
-   "source": [
-    "print(wikipedia_dataset[1092])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -77,46 +75,47 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "print(wikipedia_dataset[1092])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:15:37.840519Z",
      "start_time": "2024-10-29T14:15:37.072530Z"
     }
    },
+   "outputs": [],
    "source": [
     "obscure_questions_dataset = load_dataset(\"nuprl/engineering-llm-systems\", name=\"obscure_questions\", split=\"test\")\n"
-   ],
-   "outputs": [],
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:15:38.440171Z",
      "start_time": "2024-10-29T14:15:37.844473Z"
     }
    },
-   "source": "obscure_questions_dataset_tiny = load_dataset(\"nuprl/engineering-llm-systems\", name=\"obscure_questions\", split=\"tiny\")",
    "outputs": [],
-   "execution_count": 7
+   "source": [
+    "obscure_questions_dataset_tiny = load_dataset(\"nuprl/engineering-llm-systems\", name=\"obscure_questions\", split=\"tiny\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T03:26:30.581943Z",
      "start_time": "2024-10-29T03:26:30.550520Z"
     }
    },
-   "source": [
-    "print(obscure_questions_dataset_tiny[1])\n",
-    "obscure_questions_dataset_tiny[0][\"choices\"]"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -139,20 +138,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "source": [
+    "print(obscure_questions_dataset_tiny[1])\n",
+    "obscure_questions_dataset_tiny[0][\"choices\"]"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T14:12:08.935654Z",
      "start_time": "2024-10-29T14:10:01.885100Z"
     }
    },
-   "source": [
-    "Homework3.answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"],\n",
-    "                       wikipedia_dataset)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -177,28 +176,31 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "source": [
+    "Homework3.answer_query(obscure_questions_dataset_tiny[0][\"prompt\"], obscure_questions_dataset_tiny[0][\"choices\"],\n",
+    "                       wikipedia_dataset)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-29T17:50:03.525667Z",
      "start_time": "2024-10-29T17:43:11.624500Z"
     }
    },
-   "cell_type": "code",
-   "source": "Homework3.benchmark_accuracy(obscure_questions_dataset_tiny[\"prompt\"], obscure_questions_dataset_tiny[\"choices\"], wikipedia_dataset, expected_answers=obscure_questions_dataset_tiny[\"correct_answer\"])",
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60f503565c4d40969ec1b9cc20aab77b",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
        "Benchmarking Accuracy:   0%|          | 0/50 [00:00<?, ?it/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "60f503565c4d40969ec1b9cc20aab77b"
-      }
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -621,14 +623,16 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "source": [
+    "Homework3.benchmark_accuracy(obscure_questions_dataset_tiny[\"prompt\"], obscure_questions_dataset_tiny[\"choices\"], wikipedia_dataset, expected_answers=obscure_questions_dataset_tiny[\"correct_answer\"])"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
