--- a/Homeworks/Homework4/finetuning.ipynb
+++ b/Homeworks/Homework4/finetuning.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-10-30T19:47:28.384173Z",
      "start_time": "2024-10-30T19:47:28.375948Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "98e713d6eb36bfe9"
+   "id": "98e713d6eb36bfe9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
