its a parquet garrin...

--- a/Homeworks/Homework4/scraping.ipynb
+++ b/Homeworks/Homework4/scraping.ipynb
@@ -9578,17 +9578,17 @@
    "id": "61907b3b5b39fb52",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-06T19:48:38.502571Z",
-     "start_time": "2024-11-06T19:48:38.348546Z"
+     "end_time": "2024-11-06T20:36:38.523267Z",
+     "start_time": "2024-11-06T20:36:38.477224Z"
     }
    },
    "source": [
     "# Save the post-processed content as a DataFrame\n",
-    "df = pd.DataFrame(all_pages)\n",
+    "df = pd.DataFrame(all_pages_cleaned)\n",
     "df.to_parquet(\"processed_catalog_data.parquet\")"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
